--- a/.github/workflows/all_in_one.yml
+++ b/.github/workflows/all_in_one.yml
@@ -41,35 +41,36 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 设置 QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: 设置 Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: 登录 Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: 提取元数据
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ secrets.DOCKER_USERNAME }}/nsfwpy
+            ${{ secrets.DOCKERHUB_USERNAME }}/nsfwpy
           tags: |
             type=ref,event=branch
+            type=ref,event=tag
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
 
       - name: 构建并推送多平台镜像
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -136,7 +137,35 @@ jobs:
           name: nsfwpy-linux-amd64
           path: dist/nsfwpy
 
-  build-macos:
+  build-macos-intel:
+    runs-on: macos-13
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
+
+      - name: 设置 Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: 安装 Python 依赖
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install nuitka ordered-set zstandard
+
+      - name: 编译可执行文件
+        run: |
+          chmod +x build.sh
+          ./build.sh
+
+      - name: 上传产物
+        uses: actions/upload-artifact@v4
+        with:
+          name: nsfwpy-macos-x86_64
+          path: dist/nsfwpy
+
+  build-macos-arm:
     runs-on: macos-latest
     steps:
       - name: 检出代码
@@ -161,12 +190,43 @@ jobs:
       - name: 上传产物
         uses: actions/upload-artifact@v4
         with:
-          name: nsfwpy-macos-amd64
+          name: nsfwpy-macos-arm64
+          path: dist/nsfwpy
+
+  build-linux-arm64:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
+
+      - name: 设置 QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: 使用 Docker 编译 ARM64 版本
+        run: |
+          docker run --rm --platform linux/arm64 \
+            -v ${{ github.workspace }}:/workspace \
+            -w /workspace \
+            arm64v8/python:3.10-slim \
+            bash -c "
+              apt-get update && 
+              apt-get install -y patchelf ccache gcc g++ && 
+              pip install --upgrade pip && 
+              pip install -r requirements.txt && 
+              pip install nuitka ordered-set zstandard && 
+              chmod +x build.sh && 
+              ./build.sh
+            "
+
+      - name: 上传产物
+        uses: actions/upload-artifact@v4
+        with:
+          name: nsfwpy-linux-arm64
           path: dist/nsfwpy
 
   # 创建 GitHub Release
   create-release:
-    needs: [build-windows, build-linux, build-macos]
+    needs: [build-windows, build-linux, build-linux-arm64, build-macos-intel, build-macos-arm]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
@@ -181,11 +241,23 @@ jobs:
       - name: 准备发布文件
         run: |
           mkdir -p release
+          
+          # Windows
           cp artifacts/nsfwpy-windows-amd64/nsfwpy.exe release/nsfwpy-windows-amd64.exe
+          
+          # Linux
           cp artifacts/nsfwpy-linux-amd64/nsfwpy release/nsfwpy-linux-amd64
-          cp artifacts/nsfwpy-macos-amd64/nsfwpy release/nsfwpy-macos-amd64
+          cp artifacts/nsfwpy-linux-arm64/nsfwpy release/nsfwpy-linux-arm64
+          
+          # macOS
+          cp artifacts/nsfwpy-macos-x86_64/nsfwpy release/nsfwpy-macos-x86_64
+          cp artifacts/nsfwpy-macos-arm64/nsfwpy release/nsfwpy-macos-arm64
+          
+          # 添加执行权限
           chmod +x release/nsfwpy-linux-amd64
-          chmod +x release/nsfwpy-macos-amd64
+          chmod +x release/nsfwpy-linux-arm64
+          chmod +x release/nsfwpy-macos-x86_64
+          chmod +x release/nsfwpy-macos-arm64
 
       - name: 创建 Release
         uses: softprops/action-gh-release@v1
@@ -193,7 +265,9 @@ jobs:
           files: |
             release/nsfwpy-windows-amd64.exe
             release/nsfwpy-linux-amd64
-            release/nsfwpy-macos-amd64
+            release/nsfwpy-linux-arm64
+            release/nsfwpy-macos-x86_64
+            release/nsfwpy-macos-arm64
           draft: false
           prerelease: false
           generate_release_notes: true
