--- a/.github/workflows/build_executables.yml
+++ b/.github/workflows/build_executables.yml
@@ -74,8 +74,8 @@ jobs:
           path: dist/nsfwpy
           retention-days: 30
 
-  build-macos:
-    runs-on: macos-latest
+  build-macos-intel:
+    runs-on: macos-13  # Intel x86_64
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
@@ -91,20 +91,81 @@ jobs:
           pip install -r requirements.txt
           pip install nuitka ordered-set zstandard
 
-      - name: 编译可执行文件 (macOS)
+      - name: 编译可执行文件 (macOS Intel)
         run: |
           chmod +x build.sh
           ./build.sh
 
-      - name: 上传 macOS 可执行文件
+      - name: 上传 macOS Intel 可执行文件
         uses: actions/upload-artifact@v4
         with:
-          name: nsfwpy-macos-amd64
+          name: nsfwpy-macos-x86_64
+          path: dist/nsfwpy
+          retention-days: 30
+
+  build-macos-arm:
+    runs-on: macos-latest  # Apple Silicon ARM64
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
+
+      - name: 设置 Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: 安装 Python 依赖
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install nuitka ordered-set zstandard
+
+      - name: 编译可执行文件 (macOS ARM64)
+        run: |
+          chmod +x build.sh
+          ./build.sh
+
+      - name: 上传 macOS ARM64 可执行文件
+        uses: actions/upload-artifact@v4
+        with:
+          name: nsfwpy-macos-arm64
+          path: dist/nsfwpy
+          retention-days: 30
+
+  build-linux-arm64:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
+
+      - name: 设置 QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: 使用 Docker 编译 ARM64 版本
+        run: |
+          docker run --rm --platform linux/arm64 \
+            -v ${{ github.workspace }}:/workspace \
+            -w /workspace \
+            arm64v8/python:3.10-slim \
+            bash -c "
+              apt-get update && 
+              apt-get install -y patchelf ccache gcc g++ && 
+              pip install --upgrade pip && 
+              pip install -r requirements.txt && 
+              pip install nuitka ordered-set zstandard && 
+              chmod +x build.sh && 
+              ./build.sh
+            "
+
+      - name: 上传 Linux ARM64 可执行文件
+        uses: actions/upload-artifact@v4
+        with:
+          name: nsfwpy-linux-arm64
           path: dist/nsfwpy
           retention-days: 30
 
   create-release:
-    needs: [build-windows, build-linux, build-macos]
+    needs: [build-windows, build-linux, build-linux-arm64, build-macos-intel, build-macos-arm]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
@@ -116,16 +177,26 @@ jobs:
         with:
           path: artifacts
 
-      - name: 重命名文件
+      - name: 准备发布文件
         run: |
           mkdir -p release
-          cp artifacts/nsfwpy-windows-amd64/nsfwpy.exe release/nsfwpy-windows-amd64.exe
-          cp artifacts/nsfwpy-linux-amd64/nsfwpy release/nsfwpy-linux-amd64
-          cp artifacts/nsfwpy-macos-amd64/nsfwpy release/nsfwpy-macos-amd64
           
-          # 为Linux和macOS添加执行权限
+          # Windows
+          cp artifacts/nsfwpy-windows-amd64/nsfwpy.exe release/nsfwpy-windows-amd64.exe
+          
+          # Linux
+          cp artifacts/nsfwpy-linux-amd64/nsfwpy release/nsfwpy-linux-amd64
+          cp artifacts/nsfwpy-linux-arm64/nsfwpy release/nsfwpy-linux-arm64
+          
+          # macOS
+          cp artifacts/nsfwpy-macos-x86_64/nsfwpy release/nsfwpy-macos-x86_64
+          cp artifacts/nsfwpy-macos-arm64/nsfwpy release/nsfwpy-macos-arm64
+          
+          # 添加执行权限
           chmod +x release/nsfwpy-linux-amd64
-          chmod +x release/nsfwpy-macos-amd64
+          chmod +x release/nsfwpy-linux-arm64
+          chmod +x release/nsfwpy-macos-x86_64
+          chmod +x release/nsfwpy-macos-arm64
 
       - name: 创建 Release
         uses: softprops/action-gh-release@v1
@@ -133,7 +204,9 @@ jobs:
           files: |
             release/nsfwpy-windows-amd64.exe
             release/nsfwpy-linux-amd64
-            release/nsfwpy-macos-amd64
+            release/nsfwpy-linux-arm64
+            release/nsfwpy-macos-x86_64
+            release/nsfwpy-macos-arm64
           draft: false
           prerelease: false
           generate_release_notes: true
