--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -10,18 +10,24 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.10.9
+      
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+      
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
-          python-version: 3.10.9
-      - name: Install dependencies
+          python-version: "3.10"
+      
+      - name: Build package
         run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
-      - name: Build and publish
+          uv build
+      
+      - name: Publish to PyPI
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI }}
         run: |
-          python setup.py sdist bdist_wheel
-          twine upload dist/*
+          uv tool run twine upload dist/* --skip-existing
