--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,15 @@
 [project]
 name = "nsfwpy"
-version = "0.1.4.4"
-description = "基于OpenNSFW的图像内容检测工具"
+version = "0.1.0"
+description = "A lightweight Python library for NSFW content detection using ONNX models"
 readme = "README.md"
-authors = [
-    { name = "YiMing", email = "1790233968@qq.com" }
-]
-requires-python = ">=3.11"
+requires-python = ">=3.8"
 dependencies = [
-    "numpy<=1.26.4",
-    "pillow<=11.1.0",
-    "fastapi<=0.115.11",
-    "uvicorn<=0.34.0",
-    "onnxruntime<=1.21.0",
-    "python-multipart<=0.0.20",
-    "opencv-python-headless<=4.11.0.86",
+    "numpy>=1.21.0",
+    "pillow>=9.0.0",
+    "fastapi>=0.100.0",
+    "uvicorn>=0.23.0",
+    "onnxruntime>=1.15.0",
+    "python-multipart>=0.0.6",
+    "opencv-python-headless>=4.8.0",
 ]
-
-[project.scripts]
-nsfwpy = "nsfwpy.server:main"
-
-[project.urls]
-Homepage = "https://github.com/HG-ha/nsfwpy"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["nsfwpy"]
