--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -9,9 +9,6 @@ on:
 jobs:
   build-publish:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write  # 用于 PyPI 可信发布（推荐）
-      contents: read
     steps:
       - uses: actions/checkout@v4
       
@@ -32,6 +29,9 @@ jobs:
           python -m build
       
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI }}
+        run: |
+          python -m pip install twine
+          twine upload dist/*
