Enhance README files with GPU installation instructions and hardware acceleration details. Update NSFWDetectorONNX to optimize thread management based on CPU core count. Remove outdated RELEASE.md and adjust CI workflows for Docker and PyPI publishing.

--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -3,7 +3,7 @@ name: Publish to PyPI
 on:
   push:
     tags:
-      - 'v*.*.*'  # 触发条件：推送 v 开头的标签，如 v1.0.0
+      - 'v*'  # 触发条件：推送 v 开头的标签，如 v0.1.5
   workflow_dispatch:  # 允许手动触发
 
 jobs:
